--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.49.0"
-  }
+  },
+  "browserslisr":[
+    "last 1 version",
+    "> 1%",
+    "maintained node version",
+    "not dead"
+  ]
 }
